--- a/package.json
+++ b/package.json
@@ -1,11 +1,16 @@
 {
-  "name": "use-document-visibility",
-  "version": "1.0.0",
+  "name": "hook-use-document-visibility",
+  "version": "0.1.0",
   "description": "",
+  "main": "dist/index.js",
+  "typings": "dist/index.d.ts",
+  "files": [
+      "dist"
+    ],
   "scripts": {
     "start": "rollup -c rollup.config.js -w"
   },
-  "author": "",
+  "author": "jamila_sh",
   "license": "ISC",
   "devDependencies": {
     "@babel/core": "^7.18.2",
