--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@jamila_sh/hook-use-document-visibility",
+  "name": "hook-use-document-visibility",
   "version": "0.1.1",
   "description": "",
   "main": "dist/index.js",
